fixed fixed background and spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,19 +16,19 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   margin: auto;
   background-image: url('http://images.alphacoders.com/282/282163.jpg');
+  background-attachment: fixed;
   background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
+  background-repeat: no-repeat fixed;
   font-family: cursive;
 }
 .map {
   position: relative;
   float: left;
   left: 4%;
-  margin: 5% auto;
+  margin: 1% auto;
   width: 45%;
   height: 500px;
   background-color: #ffe9b6;
@@ -37,7 +37,7 @@ div .bench-index {
   position: relative;
   float: right;
   right: 4%;
-  margin: 5% auto;
+  margin: 1% auto;
   height: 500px;
   width: 45%;
   font-size: 20px;
@@ -45,8 +45,8 @@ div .bench-index {
   overflow-y: auto;
 }
 div header {
-  width: 100%;
-  margin: auto;
+  width: 92%;
+  margin: 1% auto;
   text-align: center;
   background-color: #fdf6e3;
   font-size: 40px;
